@@ -1,3 +1,8 @@
+2004-08-27  Steve Harris  <steve@plugin.org.uk>
+
+	* lo_lowlevel.h, send.c: added OSX compatibility fixes from Taybin
+	  Rutkin.
+
 2004-08-19  Steve Harris  <steve@plugin.org.uk>
 
 	Release 0.9
